[package]
name = "tweb"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = true
codegen-units = 1
rpath = false

[dependencies]
chrono = "0.4.24"
log = "0.4.17"
markdown = "0.3.0"
pretty_env_logger = "0.4.0"
