[package]
name = "tweb"
version = "0.2.0"
edition = "2021"
authors = [ "TeaSpillStudios <teaspillstudios@proton.me>" ]
description = "A markdown renderer with super powers."
readme = "README.md"
homepage = "https://teaspillstudios.co.uk/tweb"
repository = "https://github.com/teaspillstudios/tweb"
license = "MIT"
keywords = [ "web", "markdown", "webserver" ]
categories = [ "web-prorgamming", "wep-programming::http-server" ]
include = [ "/src", "LICENSE" ]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = true
codegen-units = 1
rpath = false

[dependencies]
chrono = { version = "0.4.24", features = ["clock"] }
chunked_transfer = "1.4.1"
dirs = "5.0.0"
log = "0.4.17"
markdown = "0.3.0"
pretty_env_logger = "0.4.0"
